--- a/css/style.css
+++ b/css/style.css
@@ -66,7 +66,7 @@ padding: 5px;
     display: inline-block;
     padding: 5px;
     }
-    #img {
+    .img {
     width: 600px;
     height: 500px;
     }
